z-index fix

--- a/src/styles/chapters.css
+++ b/src/styles/chapters.css
@@ -169,7 +169,8 @@
   }
 
   body.sec-subheader main{
-    z-index: 100;
+    z-index: 1000;
+    background: none;
   }
 
   /* Make each section button fill available height maximally */
